Adjust card number format

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="label-input-layout">
             <label for="cardNumber">CARD NUMBER</label>
-            <input type="text" id="cardNumber" name="cardNumber" placeholder="e.g. 1234 5678 9123 0000" class="input-style" maxlength="19" required/>
+            <input type="text" id="cardNumber" name="cardNumber" placeholder="e.g. 1234 5678 9123 0000" class="input-style" required/>
             <span id="cardNumberError" class="error hide-error">Wrong format, number only</span>
           </div>
 
